# CAGPJax

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json
.github/workflows/: build_docs.yml  run_tests.yml
cagpjax/: __init__.py  models.py  operators.py  typing.py
cagpjax/linalg/: __init__.py  congruence.py
cagpjax/models/: __init__.py  base.py
cagpjax/operators/: __init__.py  block_diagonal_sparse.py  diag_like.py
cagpjax/policies/: __init__.py  base.py  block_sparse.py  lanczos.py
docs/: gen_ref_pages.py  index.md
reference/SUMMARY/: index.html
reference/cagpjax/: index.html
reference/cagpjax/computations/: index.html
reference/cagpjax/computations/lazy/: index.html
reference/cagpjax/distributions/: index.html
reference/cagpjax/interop/: index.html
reference/cagpjax/linalg/: index.html
reference/cagpjax/linalg/congruence/: index.html
reference/cagpjax/linalg/eigh/: index.html
reference/cagpjax/linalg/lower_cholesky/: index.html
reference/cagpjax/linalg/orthogonalize/: index.html
reference/cagpjax/linalg/utils/: index.html
reference/cagpjax/models/: index.html
reference/cagpjax/models/base/: index.html
reference/cagpjax/models/cagp/: index.html
reference/cagpjax/operators/: index.html
reference/cagpjax/operators/annotations/: index.html
reference/cagpjax/operators/block_diagonal_sparse/: index.html
reference/cagpjax/operators/diag_like/: index.html
reference/cagpjax/operators/lazy_kernel/: index.html
reference/cagpjax/operators/utils/: index.html
reference/cagpjax/policies/: index.html
reference/cagpjax/policies/base/: index.html
reference/cagpjax/policies/block_sparse/: index.html
reference/cagpjax/policies/lanczos/: index.html
reference/cagpjax/policies/orthogonalization/: index.html
reference/cagpjax/policies/pseudoinput/: index.html
reference/cagpjax/solvers/: index.html
reference/cagpjax/solvers/base/: index.html
reference/cagpjax/solvers/cholesky/: index.html
reference/cagpjax/solvers/pseudoinverse/: index.html
reference/cagpjax/typing/: index.html
search/: search_index.json
src/cagpjax/: __init__.py  distributions.py  interop.py
src/cagpjax/computations/: __init__.py  lazy.py
src/cagpjax/linalg/: __init__.py  congruence.py  eigh.py  lower_cholesky.py  orthogonalize.py  utils.py
src/cagpjax/models/: __init__.py  base.py  cagp.py
src/cagpjax/operators/: __init__.py  annotations.py  block_diagonal_sparse.py  diag_like.py  lazy_kernel.py  utils.py
src/cagpjax/policies/: __init__.py  base.py  block_sparse.py  lanczos.py  orthogonalization.py  pseudoinput.py
src/cagpjax/solvers/: __init__.py  base.py  cholesky.py  pseudoinverse.py
tests/: __init__.py  test_computations.py  test_distributions.py  test_interop.py  test_linalg.py  test_models.py  test_operators.py  test_policies.py  test_solvers.py
