[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cagpjax"
version = "0.1.0"
description = "Computation-Aware Gaussian Processes for GPJax"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Seth Axen", email = "seth.axen@gmail.com" },
]

dependencies = [
    "jax",
    "gpjax",
    "jaxtyping",
    "beartype",
    "cola-ml>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest", 
    "pre-commit",
    "ruff",
    "pyright",
]

[tool.ruff.lint]
ignore = ["F722"]  # Ignore syntax errors in forward annotations for jaxtyping