[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cagpjax"
version = "0.1.0"
description = "Computation-Aware Gaussian Processes for JAX"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = {file = "LICENSE"}
authors = [
    { name = "Seth Axen", email = "seth@sethaxen.com" },
]
keywords = ["jax", "gaussian-processes", "machine-learning", "bayesian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {repository = "https://github.com/sethaxen/CAGPJax" }

dependencies = [
    "jax>=0.5,<0.6",
    "gpjax",
    "jaxtyping",
    "cola-ml>=0.0.7",
    "flax>=0.10.0",
    "typing-extensions",
]

[project.optional-dependencies]
test = [
    "pytest", 
    "pytest-cov",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-bibtex",
]
dev = [
    "cagpjax[test]",
    "pre-commit",
]

[tool.ruff.lint]
select = ["I"]  # Enable isort rules
ignore = ["F722"]  # Ignore syntax errors in forward annotations for jaxtyping

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["cagpjax"]
